components/apps/archive/base/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    hajimari.io/appName: Tekton
    hajimari.io/enable: "true"
spec:
  rules:
  - host: tekton.${CLUSTER_DOMAIN}
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
  tls:
  - hosts:
    - tekton.${CLUSTER_DOMAIN}
    secretName: tekton-certificate-tls
